Fix dark mode highlighting of active table rows

--- a/src/css/themes/tessera-dark.css
+++ b/src/css/themes/tessera-dark.css
@@ -149,6 +149,28 @@ h1 .ds-secondary-title {
     background-color: #454545;
 }
 
+.table > thead > tr > td.active,
+.table > tbody > tr > td.active,
+.table > tfoot > tr > td.active,
+.table > thead > tr > th.active,
+.table > tbody > tr > th.active,
+.table > tfoot > tr > th.active,
+.table > thead > tr.active > td,
+.table > tbody > tr.active > td,
+.table > tfoot > tr.active > td,
+.table > thead > tr.active > th,
+.table > tbody > tr.active > th,
+.table > tfoot > tr.active > th {
+    background-color: #454545;
+}
+
+.table-hover > tbody > tr > td.active:hover,
+.table-hover > tbody > tr > th.active:hover,
+.table-hover > tbody > tr.active:hover > td,
+.table-hover > tbody > tr.active:hover > th {
+    background-color: #454545;
+}
+
 .table thead tr th,
 .table thead tr td {
     border-bottom: 1px solid #454545;
